add font for linux

--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -7,8 +7,9 @@
 }
 
 \usepackage[slantfont,boldfont]{xeCJK}
-\setCJKmainfont{Songti SC} %mac osx
+%\setCJKmainfont{Songti SC} %mac osx
 %\setCJKmainfont{SimSun} windows下使用
+\setCJKmainfont{文泉驿微米黑}
 
 
 
